@@ -1,3 +1,7 @@
+2006-02-07  Sven Neumann  <sven@gimp.org>
+
+	* app/about.h (GIMP_LICENSE): s/This program/GIMP/g
+
 2006-02-06  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c: added const qualifier.
